[tool.poetry]
name = "giu"
version = "0.1.0"
description = "Gandi LiveDNS Updater - commnand line tool to keep your dynamic ip up to date"
authors = ["Yago Riveiro <yago.riveiro@gmail.com>"]
maintainers = ["Yago Riveiro <yago.riveiro@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/yriveiro/giu"
homepage = "https://github.com/yriveiro/giu"
keywords = ['Gandi', 'LiveDNS', 'Dynamic IP', 'dns']

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Environment :: Console",
    "Topic :: Internet :: Name Service (DNS)",
    "Framework :: tox"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"
tomlkit = "^0.7.0"
halo = "^0.0.31"
tox-docker = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
mypy = "^0.790"
pynvim = "^0.4.2"
pre-commit = "^2.9.3"
pytest-cov = "^2.10.1"
pytest-mypy = "^0.8.0"
pytest-sugar = "^0.9.4"
tox = "^3.20.1"
requests-mock = "^1.8.0"

[tool.poetry.scripts]
giu = 'giu.cli:giu'

[tool.isort]
line_length = 88
force_single_line = true
atomic = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
