[tool.poetry]
name = "giu"
version = "0.3.5"
description = "Gandi LiveDNS Updater - Command line tool to keep your dynamic ip up to date"
authors = ["Yago Riveiro <yago.riveiro@gmail.com>"]
maintainers = ["Yago Riveiro <yago.riveiro@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/yriveiro/giu"
homepage = "https://github.com/yriveiro/giu"
keywords = ['Gandi', 'LiveDNS', 'Dynamic IP', 'dns']

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Environment :: Console",
    "Topic :: Internet :: Name Service (DNS)",
    "Framework :: tox"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.1"
halo = "^0.0.31"
atoml = "^1.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.982"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mypy = "^0.10.0"
pytest-sugar = "^0.9.5"
requests-mock = "^1.10.0"
tox = "^3.27.0"
tox-docker = "^3.1.0"
toml = "^0.10.2"

[tool.poetry.scripts]
giu = 'giu.cli:giu'

[tool.isort]
line_length = 88
force_single_line = true
atomic = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.yapf]
based_on_style = "facebook"
column_limit = 88
